Add audit logs for Grpc services